[gd_scene load_steps=11 format=3 uid="uid://copffu8i51p7h"]

[ext_resource type="PackedScene" uid="uid://bcma8ty36dfkp" path="res://scenes/maps/map_1.tscn" id="1_8v8s5"]
[ext_resource type="Script" path="res://scenes/main_scenes/game_scene.gd" id="1_s2vi8"]
[ext_resource type="Texture2D" uid="uid://cc48g4c63juj5" path="res://assets/ui/buttons/blue_button12.png" id="2_ixghg"]
[ext_resource type="Script" path="res://scenes/main_scenes/ui.gd" id="3_hgs8x"]
[ext_resource type="Texture2D" uid="uid://b03f02dau8pcj" path="res://assets/towers/towerDefense_tile249.png" id="3_xx73l"]
[ext_resource type="Texture2D" uid="uid://d5mlmstxm6s5" path="res://assets/towers/towerDefense_tile250.png" id="4_r4wgg"]
[ext_resource type="Texture2D" uid="uid://ckxxmst4kloco" path="res://assets/towers/towerDefense_tile251.png" id="7_b4mq5"]
[ext_resource type="Texture2D" uid="uid://c2cge5hiij8fi" path="res://assets/ui/icons/right.png" id="8_hvvf3"]
[ext_resource type="Texture2D" uid="uid://be8gvui5k0vsf" path="res://assets/ui/icons/pause.png" id="9_e3gxg"]
[ext_resource type="Texture2D" uid="uid://b3rl5hsfhjkd8" path="res://assets/ui/icons/fastForward.png" id="10_exlsc"]

[node name="GameScene" type="Node2D"]
script = ExtResource("1_s2vi8")

[node name="Map1" parent="." instance=ExtResource("1_8v8s5")]

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("3_hgs8x")

[node name="HUD" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TowerShopContainer" type="VBoxContainer" parent="UI/HUD"]
custom_minimum_size = Vector2(128, 512)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -512.0
offset_right = 128.0
grow_vertical = 0
theme_override_constants/separation = 16
alignment = 2

[node name="MachineGunT1Button" type="TextureButton" parent="UI/HUD/TowerShopContainer" groups=["ShopButton"]]
custom_minimum_size = Vector2(72, 72)
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("2_ixghg")
stretch_mode = 0

[node name="TowerIcon" type="TextureRect" parent="UI/HUD/TowerShopContainer/MachineGunT1Button"]
layout_mode = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 68.0
offset_bottom = 68.0
texture = ExtResource("3_xx73l")

[node name="MachineGunT2Button" type="TextureButton" parent="UI/HUD/TowerShopContainer" groups=["ShopButton"]]
custom_minimum_size = Vector2(72, 72)
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("2_ixghg")
stretch_mode = 0

[node name="TowerIcon" type="TextureRect" parent="UI/HUD/TowerShopContainer/MachineGunT2Button"]
layout_mode = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 68.0
offset_bottom = 68.0
texture = ExtResource("4_r4wgg")

[node name="MissileT1Button" type="TextureButton" parent="UI/HUD/TowerShopContainer" groups=["ShopButton"]]
custom_minimum_size = Vector2(72, 72)
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("2_ixghg")
stretch_mode = 0

[node name="TowerIcon" type="TextureRect" parent="UI/HUD/TowerShopContainer/MissileT1Button"]
layout_mode = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 68.0
offset_bottom = 68.0
texture = ExtResource("7_b4mq5")

[node name="GameControlsContainer" type="HBoxContainer" parent="UI/HUD"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -204.0
offset_top = -100.0
grow_horizontal = 0
grow_vertical = 0

[node name="PlayPauseButton" type="TextureButton" parent="UI/HUD/GameControlsContainer"]
process_mode = 3
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
toggle_mode = true
texture_normal = ExtResource("8_hvvf3")
texture_pressed = ExtResource("9_e3gxg")

[node name="FastForwardButton" type="TextureButton" parent="UI/HUD/GameControlsContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
texture_normal = ExtResource("10_exlsc")

[connection signal="pressed" from="UI/HUD/GameControlsContainer/PlayPauseButton" to="UI" method="_on_play_pause_button_pressed"]
[connection signal="pressed" from="UI/HUD/GameControlsContainer/FastForwardButton" to="UI" method="_on_fast_forward_button_pressed"]
